# zero2prod

./: Cargo.toml  Dockerfile  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20250410142036_create_subscriptions_table.sql  20250505185232_add_status_to_subscriptions.sql  20250505185709_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
