[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lints.clippy]
needless_return = "allow"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive"] }
